crates/test-ui/ui/msg_send_super_not_classtype.stderr
error[E0277]: the trait bound `AnyObject: ClassType` is not satisfied
 --> ui/msg_send_super_not_classtype.rs
  |
  |     let _: () = unsafe { msg_send![super(obj), method] };
  |                          ----------------^^^----------
  |                          |               |
  |                          |               the trait `ClassType` is not implemented for `AnyObject`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `ClassType`:
            NSObject
            __NSProxy
            __RcTestObject
note: required by a bound in `__send_super_message_static`
 --> $WORKSPACE/crates/objc2/src/message/mod.rs
  |
  |     unsafe fn __send_super_message_static<A, R>(self, sel: Sel, args: A) -> R
  |               --------------------------- required by a bound in this associated function
  |     where
  |         Self::__Inner: ClassType,
  |                        ^^^^^^^^^ required by this bound in `MessageReceiver::__send_super_message_static`

error[E0277]: the trait bound `AnyObject: ClassType` is not satisfied
 --> ui/msg_send_super_not_classtype.rs
  |
  |     let _: () = unsafe { msg_send![super(obj), method] };
  |                          ----------------^^^----------
  |                          |               |
  |                          |               the trait `ClassType` is not implemented for `AnyObject`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `ClassType`:
            NSObject
            __NSProxy
            __RcTestObject
note: required by a bound in `__send_super_message_static`
 --> $WORKSPACE/crates/objc2/src/message/mod.rs
  |
  |     unsafe fn __send_super_message_static<A, R>(self, sel: Sel, args: A) -> R
  |               --------------------------- required by a bound in this associated function
...
  |         <Self::__Inner as ClassType>::Super: ClassType,
  |                                              ^^^^^^^^^ required by this bound in `MessageReceiver::__send_super_message_static`
